@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.241 2007/12/18 19:02:55 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.242 2008/01/17 20:38:42 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -5697,7 +5697,7 @@ plot_image_or_update_axes(void *plot, TBOOLEAN update_axes)
 	    return;
 	}
 
-    } else {
+    } else {	/* !rectangular_image  or "with image failsafe" */
 
 	    /* Use sum of vectors to compute the pixel corners with respect to its center. */
 	    struct {double x; double y; double z;} delta_grid[2], delta_pixel[2];
@@ -5757,16 +5757,13 @@ plot_image_or_update_axes(void *plot, TBOOLEAN update_axes)
 		    p_corners[3].y = y - delta_pixel[1].y;
 		    p_corners[3].z = z - delta_pixel[1].z;
 
-		    /* Check if one of the corners is viewable */
+		    /* Check if any of the corners are viewable */
 		    for (k=0; k < 4; k++) {
 			corner_in_range[k] =
-			    inrange(p_corners[k].x,
-			            view_port_x[0], view_port_x[1])
-			    && inrange(p_corners[k].y,
-			               view_port_y[0], view_port_y[1])
-			    && (!project_points
-			        || inrange(p_corners[k].z,
-				           view_port_z[0], view_port_z[1]));
+			    inrange(p_corners[k].x, view_port_x[0], view_port_x[1])
+			    && inrange(p_corners[k].y, view_port_y[0], view_port_y[1])
+			    && (!project_points || splot_map ||
+			        inrange(p_corners[k].z, view_port_z[0], view_port_z[1]));
 			pixel_in_view = pixel_in_view || corner_in_range[k];
 		    }
 
